tests/ui/field_representing_types/non-struct.old.stderr
error[E0277]: the trait bound `field_of!(MyUnion, field): std::field::Field` is not satisfied
  --> $DIR/non-struct.rs:22:20
   |
LL |     assert_field::<field_of!(MyUnion, field)>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(MyUnion, field)`
   |
note: required by a bound in `assert_field`
  --> $DIR/non-struct.rs:18:20
   |
LL | fn assert_field<F: Field>() {}
   |                    ^^^^^ required by this bound in `assert_field`

error[E0277]: the trait bound `field_of!(MyEnum, A.a): std::field::Field` is not satisfied
  --> $DIR/non-struct.rs:25:20
   |
LL |     assert_field::<field_of!(MyEnum, A.a)>();
   |                    ^^^^^^^^^^^^^^^^^^^^^^ the nightly-only, unstable trait `std::field::Field` is not implemented for `field_of!(MyEnum, A.a)`
   |
note: required by a bound in `assert_field`
  --> $DIR/non-struct.rs:18:20
   |
LL | fn assert_field<F: Field>() {}
   |                    ^^^^^ required by this bound in `assert_field`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
